--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,6 @@
-# Use lightweight Python image
 FROM python:3.10-slim
 
-# Install Chromium, fonts, and utilities
+# Install Chromium + Driver + Utils
 RUN apt-get update && apt-get install -y \
     chromium \
     chromium-driver \
@@ -11,26 +10,23 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Set environment variables for Chromium
+# VERIFY INSTALL — This will FAIL BUILD if not found (good for debugging)
+RUN which chromium && chromium --version
+RUN which chromedriver && chromedriver --version
+
+# Set critical environment variables
 ENV CHROME_BIN=/usr/bin/chromium
 ENV CHROMEDRIVER_PATH=/usr/bin/chromedriver
 ENV PYTHONUNBUFFERED=1
 ENV TZ=UTC
+ENV SELENIUM_BROWSER=chromium  # 👈 Disable Selenium Manager auto-download
 
-# Create app directory
 WORKDIR /app
-
-# Copy requirements first (for caching)
 COPY requirements.txt .
-
-# Install Python packages
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy application code
 COPY . .
 
-# Expose port (Render will set PORT env var)
 EXPOSE 10000
 
-# Run the Flask app
 CMD ["python", "server.py"]
